syntax = "proto3";

option go_package = "proto/PostAvatar";
package go.micro.srv.PostAvatar;

service PostAvatar {
	rpc PostAvatar(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {

	bytes Avatar = 1; // 二进制图片流
	int64 Filesize= 2; // 文件大小
	string Fileext = 3; // 文件后缀
	string SessionId = 4;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
	string AvatarUrl = 3; // 不完整的头像地址
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
