syntax = "proto3";
option go_package = "proto/PostUserAuth";
package go.micro.srv.PostUserAuth;

service PostUserAuth {
    rpc PostUserAuth(Request) returns (Response) {}
}

message Message {
    string say = 1;
}

message Request {

    string SessionId = 1;
    string RealName = 2;
    string IdCard = 3;

}

message Response {
    string Errno = 1;
    string Errmsg = 2;
}

message StreamingRequest {
    int64 count = 1;
}

message StreamingResponse {
    int64 count = 1;
}

message Ping {
    int64 stroke = 1;
}

message Pong {
    int64 stroke = 1;
}
